# aoc-rs

./: Cargo.toml  README.md
2021/: Cargo.toml  README.md
aoc_util/: Cargo.toml
aoc_util/src/: binarytree.rs  cuboid.rs  errors.rs  graph.rs  grid.rs  io.rs  lib.rs  point.rs
data/: 16_test.txt  18_test.txt
day_01/src/: main.rs
day_02/src/: main.rs
day_03/src/: main.rs
day_04/src/: main.rs
day_05/src/: main.rs
day_06/src/: main.rs
day_07/src/: main.rs
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_1/src/: main.rs
day_10/: Cargo.toml
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
day_12/: Cargo.toml
day_12/src/: main.rs
day_13/: Cargo.toml
day_13/src/: main.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_2/src/: main.rs
day_3/src/: main.rs
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/src/: main.rs
day_7/src/: main.rs
day_8/src/: main.rs
day_9/src/: main.rs
src/: 01.rs  04.rs  06.rs  08.rs  09.rs  11.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  23.rs  24.rs
